--- a/FluidSim/index.html
+++ b/FluidSim/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.min.js"></script>
-    <script src="fluid.js"></script>
-    <script src="fluid_utils.js"></script>
-    <script src="sketch.js"></script>
+    <script src="javascript/fluid.js"></script>
+    <script src="javascript/fluid_utils.js"></script>
+    <script src="javascript/sketch.js"></script>
     <style>
         body {
             margin: 0;
